compiler/tools/fpp-check/test/port_instance/undef_text_event.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/port_instance/undef_text_event.fpp:3.3
  text event port eventOut
  ^
error: symbol Fw is not defined
note: looking for a port here
note: the symbol Fw.LogText has an implied use at the point of the error
